force-app/main/default/objects/ISO_Province__mdt/ISO_Province__mdt.object-meta.xml
<CustomObject>
    <label>ISO-Province</label>
    <pluralLabel>ISO-Provinces</pluralLabel>
</CustomObject>