force-app/main/default/objects/ISO_Province__mdt/fields/ISO_Alpha_2__c.field-meta.xml
<CustomField>
    <fullName>ISO_Alpha_2__c</fullName>
    <label>ISO-Alpha-2</label>
    <length>2</length>
    <required>true</required>
    <type>Text</type>
</CustomField>