force-app/main/default/objects/ISO_Province__mdt/fields/Subdivision_Code__c.field-meta.xml
<CustomField>
    <fullName>Subdivision_Code__c</fullName>
    <label>Subdivision-Code</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>