force-app/main/default/objects/ISO_Province__mdt/fields/Subdivision_Type__c.field-meta.xml
<CustomField>
    <fullName>Subdivision_Type__c</fullName>
    <label>Subdivision-Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>